html fajlok szerkesztese

--- a/src/github.html
+++ b/src/github.html
@@ -26,9 +26,9 @@
     <div class="container">
         <h1>Github</h1>
         <p>
-            <a href="http://">Madarász Viktor Githubja</a>
+            <a href="https://github.com/AfRiyy">Madarász Viktor Githubja</a>
         
-            <a href="http://">Lehoczki Patrícia Githubja</a>
+            <a href="https://github.com/lehoczkipatricia">Lehoczki Patrícia Githubja</a>
         </p>
 
 </body>
