--- a/src/about.html
+++ b/src/about.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Térkúp</title>
+    <title>Névjegy</title>
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-</head>
+    
+    </head>
 
 <body>
     <ul class="nav justify-content-center">
@@ -24,12 +26,15 @@
     </ul>
 
     <div class="container">
-        <h1>Github</h1>
-        <p>
-            <a href="https://github.com/AfRiyy">Madarász Dávid Githubja</a>
-        
-            <a href="https://github.com/lehoczkipatricia">Lehoczki Patrícia Githubja</a>
-        </p>
+        <h1>Feladat 0303</h1>
+        <div class="my-3">
+            <p>
+                Madarász Dávid 2021-10-15
+            </p>
+            <p>
+                Lehoczki Patrícia 2021-10-15
+            </p>
+        </div>
 
 </body>
 
