--- a/src/github.html
+++ b/src/github.html
@@ -1,3 +1,16 @@
+<!-- /*
+* File: github.html
+* Author: Lehoczki Patricia,Madarász Dávid
+* Copyright: 2021, Lehoczki Patricia,Madarász Dávid
+* Group: Szoft II N
+* Date: 2021-10-15
+-----------------
+* Last Modified Date: 2021-10-15
+* Last Modified by: Lehoczki Patricia
+* Github: https://github.com/lehoczkipatricia/dolgozatFel320
+* Licenc: MIT
+*/ -->
+
 <!DOCTYPE html>
 <html lang="hu">
 
