--- a/src/about.html
+++ b/src/about.html
@@ -1,5 +1,19 @@
+<!-- /*
+* File: about.html
+* Author: Lehoczki Patricia,Madarász Dávid
+* Copyright: 2021, Lehoczki Patricia,Madarász Dávid
+* Group: Szoft II N
+* Date: 2021-10-15
+-----------------
+* Last Modified Date: 2021-10-15
+* Last Modified by: Lehoczki Patricia
+* Github: https://github.com/lehoczkipatricia/dolgozatFel320
+* Licenc: MIT
+*/ -->
+
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
