html fajlok szepitese

--- a/src/about.html
+++ b/src/about.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    
-    </head>
+
+</head>
 
 <body>
     <ul class="nav justify-content-center">
@@ -38,16 +38,24 @@
         </li>
     </ul>
 
-    <div class="container">
-        <h1>Feladat 0303</h1>
-        <div class="my-3">
+    <div class="container-fluid wrapper">
+        <div class="m-3 p-3 text-center">
+            <h1 class="mb-3">Feladat 0320</h1>
+            <hr>
+            <img class="img-fluid" src="img/feladat.png" alt="feladat">
+            <hr>
+            <h3>Készítette:</h3>
+            <hr>
             <p>
                 Madarász Dávid 2021-10-15
             </p>
             <p>
                 Lehoczki Patrícia 2021-10-15
             </p>
+            <hr>
         </div>
+    </div>
+
 
 </body>
 
