--- a/src/github.html
+++ b/src/github.html
@@ -37,15 +37,18 @@
         </li>
     </ul>
 
-    <div class="container">
-        <h1>Github</h1>
+    <div class="container-fluid wrapper">
+        <div class="m-3 p-3 text-center">
+        <img class="img-fluid h-25 d-inline-block" src="img/github.jpg" alt="">
         <p>
-            <a href="https://github.com/AfRiyy">Madarász Dávid Githubja</a>
+            <a href="https://github.com/AfRiyy" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Madarász Dávid Githubja</a>
         </p>
         <p>
-            <a href="https://github.com/lehoczkipatricia">Lehoczki Patrícia Githubja</a>
+            <a href="https://github.com/lehoczkipatricia" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Lehoczki Patrícia Githubja</a>
+            <a href=""></a>
         </p>
-
+        </div>
+    </div>
 </body>
 
 </html>
