--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TFőoldal</title>
+    <title>Főoldal</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
 <body>
+    
     <ul class="nav justify-content-center">
         <li class="nav-item">
             <a class="nav-link" href="index.html">Főoldal</a>
@@ -37,21 +38,23 @@
         </li>
     </ul>
 
-    <div class="container">
+    <div class="container-fluid wrapper">
+        <div class="m-3 p-3 text-center">
         <h1>Láb átszámoló</h1>
         <h2>Láb mértékegységből méterre</h2>
         <div>
-            <div class="mb-3">
+            <div class="mb-3 mt-2 text-start">
                 <label for="footInput" class="form-label">Láb:</label>
                 <input type="text" class="form-control" id="footInput">
             </div>
-            <button type="button" class="btn btn-warning" id="calcButton">Számít</button>
-            <div class="mb-3 mt-3">
+            <button type="button" class="btn btn-dark" id="calcButton">Számít</button>
+            <div class="mb-3 mt-3 text-start">
                 <label for="result">Méterben:</label>
                 <input type="text" class="form-control" id="result" disabled>
             </div>
 
         </div>
+    </div>
     </div>
     <script src="app.js"></script>
 
